deployment/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: backend
spec:
  selector:
    app: backend
  ports:
    - name: http-8080
      port: 8080
      targetPort: 8080
