deployment/backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: backend
  name: backend
spec:
  port:
    targetPort: http-8080
  wildcardPolicy: None
  to:
    kind: Service
    name: backend
    weight: 100
